--- a/dev/scss/utils/_variables.scss
+++ b/dev/scss/utils/_variables.scss
@@ -22,9 +22,9 @@ $bg-color-bottom: #2b2b2b;
 $bg-color-left: #f0f0f0;
 $bg-color-right: #f0f0f0;
 
-$bg-color-edit: #4eca33;
-$bg-color-disable: #e1be40;
-$bg-color-delete: #e53636;
+// $bg-color-edit: #4eca33;
+// $bg-color-disable: #e1be40;
+// $bg-color-delete: #e53636;
 
 $white: #fff;
 $black: #111;
